# backend/task-app-web/src/main/java/com/example/taskapp/web/controller/HelloController.java
@@ -1,0 +1,17 @@
+package com.example.taskapp.web.controller;
+
+import gen.openapi.taskapp.api.HelloApi;
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequiredArgsConstructor
+public class HelloController implements HelloApi {
+
+    @Override
+    public ResponseEntity<String> hello() {
+        return new ResponseEntity<>("Hello, world", HttpStatus.OK);
+    }
+}
